add javafx gui